--- a/popup.html
+++ b/popup.html
@@ -1,1 +1,10 @@
-てすてす
+<!DOCTYPE html>
+
+<html xml:lang="en" lang="ja" xmlns="http://www.w3.org/1999/xhtml">
+  <head>
+    <title>Fork Qiita</title>
+  </head>
+  <body style="width:300px">
+    ここで認証
+  </body>
+</html>
